--- a/vue-news/vue-news/package.json
+++ b/vue-news/vue-news/package.json
@@ -10,9 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
+    "px2rem-loader": "^0.1.8",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vux": "^2.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
