--- a/vue-news/vue-news/package.json
+++ b/vue-news/vue-news/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.9.1",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
     "px2rem-loader": "^0.1.8",
@@ -18,6 +19,7 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "vux": "^2.8.1"
   },
   "devDependencies": {
